--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,6 @@ _autosave-*
 *-save.pro
 *-save.kicad_pcb
 fp-info-cache
-~*.lck
-\#auto_saved_files#
 
 # Netlist files (exported from Eeschema)
 *.net
@@ -29,3 +27,10 @@ fp-info-cache
 # Exported BOM files
 *.xml
 *.csv
+
+# Jekyll files
+_site
+
+# Other
+Makefile
+Gemfile.lock
